TCL-1272 - My Wishlist link alignment issue fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
@@ -257,6 +257,7 @@ ul.tabs{
                 .mob-login{
                     border-bottom: 1px solid #fff;
                     padding: 15px;
+                    margin-top: 15px;
                     
                     a{
                         text-align: center;                        
